[package]
name = "hot-crown"
version = "0.1.0"
description = "Hot Crown - on-chain throne bidding and battle game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hot_crown"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
